# traffic-light-system

./: .gitignore  Buzzer_8cpp.html  Buzzer_8cpp__incl.dot  CMakeLists.txt  CarsTrafficLightSystem_8cpp.html  CarsTrafficLightSystem_8cpp__incl.dot  CarsTrafficLightSystem_8h.html  CarsTrafficLightSystem_8h__dep__incl.dot  CarsTrafficLightSystem_8h__incl.dot  CarsTrafficLightSystem_8h_source.html  CheckingSystem_8cpp.html  CheckingSystem_8cpp__incl.dot  CheckingSystem_8h.html  CheckingSystem_8h__dep__incl.dot  CheckingSystem_8h__incl.dot  CheckingSystem_8h_source.html  Constants_8h.html  Constants_8h__dep__incl.dot  Constants_8h_source.html  Doxyfile  ErrorHandler_8h_source.html  FirestoreLogger_8h.html  FirestoreLogger_8h__dep__incl.dot  FirestoreLogger_8h__incl.dot  FirestoreLogger_8h_source.html  LED_8cpp.html  LED_8cpp__incl.dot  LED_8h.html  LED_8h__dep__incl.dot  LED_8h_source.html  LICENSE  Logger_8h.html  Logger_8h__dep__incl.dot  Logger_8h__incl.dot  Logger_8h_source.html  MainSystem_8cpp.html  MainSystem_8cpp__incl.dot  MainSystem_8h.html  MainSystem_8h__dep__incl.dot  MainSystem_8h__incl.dot  (+535 more)
.github/workflows/: ci.yml  cmake-single-platform.yml  doxygen.yml
cross-guard/: .gitignore  CMakeLists.txt
cross-guard/docs/: md__2_users_2saleemhamo_2_desktop_2_university_2_semester_012_2_real_01_time_01_embedded_01_prog55495fba0a07920d908a16b023e2cb14.html  pages.html
cross-guard/docs/search/: all_0.js  searchdata.js
cross-guard/include/: wiringPiStub.h
cross-guard/include/actuators/: LED.h
cross-guard/include/control_logic/: TrafficControlSystem.h
cross-guard/include/main/: MainSystem.h
cross-guard/include/main/cars_traffic_light_system/: CarsTrafficLightSystem.h
cross-guard/include/main/checking_system/: CheckingSystem.h
cross-guard/include/main/pedestrians_traffic_light_system/: PedestriansTrafficLightSystem.h
cross-guard/include/main/warning_system/: WarningSystem.h
cross-guard/include/models/: TrafficLight.h  TrafficState.h
cross-guard/include/sensors/: UltrasonicSensor.h
cross-guard/include/utils/: Constants.h  Logger.h
cross-guard/src/: main.cpp  main3.cpp  wiringPiStub.cpp  wiringPiStub.h
cross-guard/src/actuators/: Buzzer.cpp  LED.cpp  LED.h  PedestrianLight.h  TrafficLight.h  WarningSystem.h
cross-guard/src/communication/: ProtocolHandler.h
cross-guard/src/control_logic/: CarsTrafficLightComponent.cpp  CarsTrafficLightComponent.h  HWComponentsAPI.h  StateTransitionLogic.h  TrafficControlSystem.cpp  TrafficControlSystem.h  TrafficLightController.h
cross-guard/src/main/: MainSystem.cpp  MainSystem.h
cross-guard/src/main/cars_traffic_light_system/: CarsTrafficLightSystem.cpp  CarsTrafficLightSystem.h
cross-guard/src/main/checking_system/: CheckingSystem.cpp
cross-guard/src/main/pedestrians_traffic_light_system/: PedestriansTrafficLightSystem.cpp
cross-guard/src/main/warning_system/: WarningSystem.cpp
cross-guard/src/models/: PedestrianEvent.h  TrafficLight.cpp  TrafficLight.h
cross-guard/src/sensors/: CameraSensor.h  UltrasonicSensor.h
cross-guard/src/utils/: Constants.h  Logger.cpp  Logger.h
cross-guard/tests/hardware_tests/: buzzer.c
cross-guard/tests/hardware_tests/LED/button/: ledController
cross-guard/tests/hardware_tests/LED/button/other/: buttonLEDControl
cross-guard/tests/hardware_tests/actuators/: Buzzer_test.cpp
cross-guard/tests/hardware_tests/other/: buzzer  test  traffic_light
docs/: Buzzer_8h_source.html  CameraSensor_8h_source.html  CarsTrafficLightSystem_8h_source.html  CheckingSystem_8h_source.html  Components list and schematic for model.docx  Constants_8h_source.html  FirestoreLogger_8h_source.html  LED_8cpp.html  LED_8h_source.html  Logger_8h_source.html  MainSystem_8cpp.html  MainSystem_8h_source.html  PedestriansTrafficLightSystem_8h_source.html  Pitching Session.pptx  PushButton_8h_source.html  Sprint schedule.docx  SystemInterface_8h_source.html  Timer_8h.html  Timer_8h_source.html  TrafficLight_8h_source.html  UltrasonicSensor_8h_source.html  WarningSystem_8h_source.html  _buzzer_8cpp.html  _buzzer_8h_source.html  _camera_sensor_8h_source.html  _cars_traffic_light_system_8cpp.html  _cars_traffic_light_system_8h.html  _cars_traffic_light_system_8h_source.html  _checking_system_8cpp.html  _checking_system_8h.html  _checking_system_8h_source.html  _constants_8h.html  _constants_8h_source.html  _error_handler_8h_source.html  _firestore_logger_8h.html  _firestore_logger_8h_source.html  _l_e_d_8cpp.html  _l_e_d_8h.html  _l_e_d_8h_source.html  _logger_8h.html  (+1612 more)
docs/Pitching Session/: Pitching Session.pptx
docs/Rasp Pi/: OpenCV_install.url  OpenCV_install_32bit.url  OpenCV_install_64bit.url  git_commands.txt
docs/design document/: document.aux  document.out  document.tex  document.toc
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_1e.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  (+78 more)
include/: pigpio_stub.h  timerfd_stub.h  wiringPiStub.h
include/actuators/: Buzzer.h  LED.h
include/main/: CarsTimer.h  CarsTrafficLightSystem.h  CheckingSystem.h  (+5 more)
motion-detection-poc/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_17.js  all_18.js  all_1c.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+42 more)
src/: config.json  main.cpp  pigpio_stub.cpp
tests/: FirestoreLogger_test.cpp  RPiExampleTest.cpp  TimerTest.cpp
web/: index.html  logs.html
(+76 files in other folders)
